# lang_boot

./: README.md  pyproject.toml
lang_boot/: construct.py  grpo.py  main.py  main_grpo.py  train_grpo.py  utils.py
lang_boot/config/: grpo_trainer.yaml
lang_boot/reward_functions/: repetition_penalty.py  reward_fn.py  reward_fn_correct.py
scripts/: eval_lang.sh  eval_lang_no_prompt.sh  eval_mgsm.sh  reasoning_construct_dataset.sh  reasoning_construct_w_generated_traces.sh  reasoning_construct_w_translated_traces.sh  reasoning_generate_en_traces.sh  reasoning_generate_traces.sh  reasoning_generate_xx_traces.sh  reasoning_translate_queries.sh  reasoning_translate_traces.sh  train_dpo.sh  train_grpo.sh  train_grpo_baseline.sh  train_grpo_baseline_gcs.sh  train_grpo_privilaged.sh  train_grpo_privileged.sh  train_grpo_privileged_gcs.sh  train_lang.sh  train_sft.sh
tasks/task_evaluation/: belebele.py  belebele_py  global_mmlu.py  math500.py  mclm_mt_aime2024.py  mclm_mt_math100.py  sea_eval.py
tasks/task_evaluation/mgsm/: mgsm.py  mgsm_id.jsonl
tasks/task_evaluation/tydiqa/: tydiqa.py
tasks/task_modifiers/: budgeting_prompt.py  measure_prompt.py  reasoning_prompt.py  translate_prompt.py
tasks/task_training/: gsm8k.py  ifeval_like.py  json_task.py  open_r1_math220k.py
tasks/task_training/math/: math.py
