[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lang_boot"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "lang_boot"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "Making language models better at non-English from it's own generations"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
license = { "text" = "MIT" }


[tool.setuptools.packages.find]
include = ["lang_boot/*"]

[project.scripts]
lang_boot = "lang_boot.__main__:main"
